# alpha-founder-centaur-overlay

./: README.md  pyproject.toml
.agents/skills/alpha-founder-qualification/: SKILL.md
personas/: qualification-reviewer.md
prompts/: qualification-attestation.md
services/sandbox/: ALPHA_FOUNDER_QUALIFICATION.txt  SYSTEM_PROMPT.md
tests/: test_qualification_attestor.py
tools/qualification_attestor/: pyproject.toml
tools/qualification_attestor/qualification_attestor/: __init__.py  cli.py
workflows/: qualification_attestation.py
